--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@auth0/auth0-react": "^2.2.4",
     "@benrbray/prosemirror-math": "0.2.2",
     "@capacitor-community/app-icon": "^5.0.0",
-    "@capacitor/android": "6.0.0",
-    "@capacitor/app": "^6.0.0",
-    "@capacitor/browser": "^6.0.0",
-    "@capacitor/cli": "^6.0.0",
-    "@capacitor/core": "^6.0.0",
-    "@capacitor/device": "^6.0.0",
-    "@capacitor/filesystem": "^6.0.1",
+    "@capacitor/android": "^6.2.0",
+    "@capacitor/app": "^6.0.2",
+    "@capacitor/browser": "^6.0.4",
+    "@capacitor/cli": "^6.2.0",
+    "@capacitor/core": "^6.2.0",
+    "@capacitor/device": "^6.0.2",
+    "@capacitor/filesystem": "^6.0.2",
     "@capacitor/haptics": "^6.0.0",
-    "@capacitor/ios": "6.0.0",
+    "@capacitor/ios": "^6.2.0",
     "@capacitor/keyboard": "^6.0.2",
     "@capacitor/preferences": "^6.0.0",
     "@capacitor/share": "^6.0.0",
@@ -98,6 +98,7 @@
     "katex": "0.13.0",
     "lowlight": "2.9.0",
     "mermaid": "^10.9.1",
+    "mime": "^4.0.6",
     "mousetrap": "^1.6.5",
     "native-run": "^2.0.0",
     "pcloud-sdk-js": "^2.0.0",
