--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@capacitor/cli": "^6.2.0",
     "@capacitor/core": "^6.2.0",
     "@capacitor/device": "^6.0.2",
-    "@capacitor/filesystem": "^6.0.2",
+    "@capacitor/filesystem": "6.0.2",
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/ios": "^6.2.0",
     "@capacitor/keyboard": "^6.0.2",
@@ -83,6 +83,8 @@
     "@use-gesture/react": "^10.3.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.8",
+    "capa-zip": "^7.0.0",
+    "capacitor": "^0.5.6",
     "capacitor-native-biometric": "^4.2.2",
     "capacitor-secure-storage-plugin": "^0.10.0",
     "capacitor-voice-recorder": "^5.0.0",
@@ -95,6 +97,7 @@
     "dropbox": "^10.34.0",
     "eslint-config-react-app": "^7.0.1",
     "highlight.js": "^11.9.0",
+    "jszip": "^3.10.1",
     "katex": "0.13.0",
     "lowlight": "2.9.0",
     "mermaid": "^10.9.1",
