--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ionic/cli": "^7.1.6",
     "@ionic/react": "7.6.2",
     "@recognizebv/capacitor-plugin-msauth": "^3.6.0",
+    "@sereneinserenade/tiptap-search-and-replace": "^0.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tippyjs/react": "^4.2.6",
     "@tiptap/extension-blockquote": "^2.1.13",
@@ -127,6 +128,7 @@
     "tiptap": "^1.32.2",
     "tiptap-commands": "^1.17.1",
     "tiptap-extension-resize-image": "^1.1.5",
+    "tw-colors": "^3.3.2",
     "uuid": "^9.0.1",
     "xml2js": "^0.6.2"
   },
