--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "mousetrap": "^1.6.5",
     "native-run": "^2.0.0",
     "pcloud-sdk-js": "^2.0.0",
+    "perfect-freehand": "^1.2.2",
     "postcss": "^8.4.32",
     "postcss-nesting": "^12.0.1",
     "prosemirror-history": "^1.3.2",
