--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "native-run": "^2.0.0",
     "pcloud-sdk-js": "^2.0.0",
     "perfect-freehand": "^1.2.2",
+    "polygon-clipping": "^0.15.7",
     "postcss": "^8.4.32",
     "postcss-nesting": "^12.0.1",
     "prosemirror-history": "^1.3.2",
