--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tiptap/extension-code": "^2.1.13",
     "@tiptap/extension-code-block": "^2.1.13",
     "@tiptap/extension-code-block-lowlight": "^2.7.4",
+    "@tiptap/extension-color": "^2.11.5",
     "@tiptap/extension-document": "^2.1.13",
     "@tiptap/extension-gapcursor": "^2.5.7",
     "@tiptap/extension-heading": "^2.5.4",
@@ -65,7 +66,7 @@
     "@tiptap/extension-task-item": "^2.1.13",
     "@tiptap/extension-task-list": "^2.1.13",
     "@tiptap/extension-text": "^2.1.13",
-    "@tiptap/extension-text-style": "^2.8.0",
+    "@tiptap/extension-text-style": "^2.11.5",
     "@tiptap/extension-typography": "^2.8.0",
     "@tiptap/extension-underline": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
