--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tiptap/extension-gapcursor": "^2.5.7",
     "@tiptap/extension-heading": "^2.5.4",
     "@tiptap/extension-highlight": "^2.1.13",
+    "@tiptap/extension-history": "^2.11.5",
     "@tiptap/extension-image": "^2.4.0",
     "@tiptap/extension-link": "^2.1.13",
     "@tiptap/extension-list-item": "^2.1.13",
