--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -1,230 +1,231 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>CFBundleDevelopmentRegion</key>
-        <string>en</string>
-        <key>CFBundleDisplayName</key>
-        <string>Beaver Pocket</string>
-        <key>CFBundleExecutable</key>
-        <string>$(EXECUTABLE_NAME)</string>
-        <key>CFBundleIcons</key>
-        <dict>
-            <key>CFBundleAlternateIcons</key>
-            <dict>
-                <key>christmas</key>
-                <dict>
-                    <key>CFBundleIconFiles</key>
-                    <array>
-                        <string>christmas</string>
-                    </array>
-                    <key>UIPrerenderedIcon</key>
-                    <false />
-                </dict>
-                <key>deer</key>
-                <dict>
-                    <key>CFBundleIconFiles</key>
-                    <array>
-                        <string>deer</string>
-                    </array>
-                    <key>UIPrerenderedIcon</key>
-                    <false />
-                </dict>
-                <key>gift-green</key>
-                <dict>
-                    <key>CFBundleIconFiles</key>
-                    <array>
-                        <string>gift-green</string>
-                    </array>
-                    <key>UIPrerenderedIcon</key>
-                    <false />
-                </dict>
-                <key>gift-yellow</key>
-                <dict>
-                    <key>CFBundleIconFiles</key>
-                    <array>
-                        <string>gift-yellow</string>
-                    </array>
-                    <key>UIPrerenderedIcon</key>
-                    <false />
-                </dict>
-                <key>inspiration-dark</key>
-                <dict>
-                    <key>CFBundleIconFiles</key>
-                    <array>
-                        <string>inspiration-dark</string>
-                    </array>
-                    <key>UIPrerenderedIcon</key>
-                    <false />
-                </dict>
-                <key>inspiration-light</key>
-                <dict>
-                    <key>CFBundleIconFiles</key>
-                    <array>
-                        <string>inspiration-light</string>
-                    </array>
-                    <key>UIPrerenderedIcon</key>
-                    <false />
-                </dict>
-                <key>inspiration-matte</key>
-                <dict>
-                    <key>CFBundleIconFiles</key>
-                    <array>
-                        <string>inspiration-matte</string>
-                    </array>
-                    <key>UIPrerenderedIcon</key>
-                    <false />
-                </dict>
-                <key>inspiration-rainbow-dark</key>
-                <dict>
-                    <key>CFBundleIconFiles</key>
-                    <array>
-                        <string>inspiration-rainbow-dark</string>
-                    </array>
-                    <key>UIPrerenderedIcon</key>
-                    <false />
-                </dict>
-                <key>inspiration-rainbow-light</key>
-                <dict>
-                    <key>CFBundleIconFiles</key>
-                    <array>
-                        <string>inspiration-rainbow-light</string>
-                    </array>
-                    <key>UIPrerenderedIcon</key>
-                    <false />
-                </dict>
-            </dict>
-            <key>CFBundlePrimaryIcon</key>
-            <dict>
-                <key>CFBundleIconFiles</key>
-                <array>
-                    <string>AppIcon</string>
-                </array>
-                <key>UIPrerenderedIcon</key>
-                <false />
-            </dict>
-        </dict>
-        <key>CFBundleIdentifier</key>
-        <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-        <key>CFBundleInfoDictionaryVersion</key>
-        <string>6.0</string>
-        <key>CFBundleName</key>
-        <string>$(PRODUCT_NAME)</string>
-        <key>CFBundlePackageType</key>
-        <string>APPL</string>
-        <key>CFBundleShortVersionString</key>
-        <string>$(MARKETING_VERSION)</string>
-        <key>CFBundleURLTypes</key>
-        <array>
-            <dict>
-                <key>CFBundleTypeRole</key>
-                <string>Editor</string>
-                <key>CFBundleURLSchemes</key>
-                <array>
-                    <string>com.googleusercontent.apps.462278481265-kugstu9sglncb5ms2vfi9glrkfqn531v</string>
-                </array>
-            </dict>
-            <dict>
-                <key>CFBundleTypeRole</key>
-                <string>Editor</string>
-                <key>CFBundleURLSchemes</key>
-                <array>
-                    <string>msauth.$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-                </array>
-            </dict>
-            <dict>
-                <key>CFBundleTypeRole</key>
-                <string>Editor</string>
-                <key>CFBundleURLName</key>
-                <string>beaver.notes.pocket</string>
-                <key>CFBundleURLSchemes</key>
-                <array>
-                    <string>beaver-pocket</string>
-                </array>
-            </dict>
-        </array>
-        <key>CFBundleVersion</key>
-        <string>$(CURRENT_PROJECT_VERSION)</string>
-        <key>LSApplicationQueriesSchemes</key>
-        <array>
-            <string>msauthv2</string>
-            <string>msauthv3</string>
-        </array>
-        <key>LSRequiresIPhoneOS</key>
-        <true />
-        <key>LSSupportsOpeningDocumentsInPlace</key>
-        <true />
-        <key>NSAppTransportSecurity</key>
-        <dict>
-            <key>NSAllowsArbitraryLoads</key>
-            <true />
-        </dict>
-        <key>NSFaceIDUsageDescription</key>
-        <string>To secure notes</string>
-        <key>NSMicrophoneUsageDescription</key>
-        <string>To record audio notes</string>
-        <key>NSUbiquitousContainers</key>
-        <dict>
-            <key>iCloud.beaver.notes.pocket</key>
-            <dict>
-                <key>NSUbiquitousContainerIsDocumentScopePublic</key>
-                <true />
-                <key>NSUbiquitousContainerName</key>
-                <string>Beaver Pocket</string>
-                <key>NSUbiquitousContainerSupportedFolderLevels</key>
-                <string>ANY</string>
-            </dict>
-        </dict>
-        <key>UIFileSharingEnabled</key>
-        <true />
-        <key>UILaunchStoryboardName</key>
-        <string>LaunchScreen</string>
-        <key>UIMainStoryboardFile</key>
-        <string>Main</string>
-        <key>UIRequiredDeviceCapabilities</key>
-        <array>
-            <string>armv7</string>
-        </array>
-        <key>UIRequiresFullScreen</key>
-        <false />
-        <key>UIStatusBarHidden</key>
-        <false />
-        <key>UISupportedInterfaceOrientations</key>
-        <array>
-            <string>UIInterfaceOrientationPortrait</string>
-            <string>UIInterfaceOrientationPortraitUpsideDown</string>
-        </array>
-        <key>UISupportedInterfaceOrientations~ipad</key>
-        <array>
-            <string>UIInterfaceOrientationLandscapeLeft</string>
-            <string>UIInterfaceOrientationLandscapeRight</string>
-            <string>UIInterfaceOrientationPortrait</string>
-            <string>UIInterfaceOrientationPortraitUpsideDown</string>
-        </array>
-        <key>UIViewControllerBasedStatusBarAppearance</key>
-        <true />
-        <key>UTExportedTypeDeclarations</key>
-        <array>
-            <dict>
-                <key>UTTypeConformsTo</key>
-                <array>
-                    <string>public.json</string>
-                </array>
-                <key>UTTypeDescription</key>
-                <string>BEA Custom File</string>
-                <key>UTTypeIconFiles</key>
-                <array />
-                <key>UTTypeIdentifier</key>
-                <string>beaver.notes.pocket.bea</string>
-                <key>UTTypeTagSpecification</key>
-                <dict>
-                    <key>public.filename-extension</key>
-                    <array>
-                        <string>bea</string>
-                    </array>
-                    <key>public.mime-type</key>
-                    <string>application/json</string>
-                </dict>
-            </dict>
-        </array>
-    </dict>
+<dict>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>Beaver Pocket</string>
+	<key>CFBundleExecutable</key>
+	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundleAlternateIcons</key>
+		<dict>
+			<key>christmas</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>christmas</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>deer</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>deer</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>gift-green</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>gift-green</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>gift-yellow</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>gift-yellow</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>inspiration-dark</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>inspiration-dark</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>inspiration-light</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>inspiration-light</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>inspiration-matte</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>inspiration-matte</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>inspiration-rainbow-dark</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>inspiration-rainbow-dark</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>inspiration-rainbow-light</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>inspiration-rainbow-light</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+		</dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>AppIcon</string>
+			</array>
+			<key>UIPrerenderedIcon</key>
+			<false/>
+		</dict>
+	</dict>
+	<key>CFBundleIdentifier</key>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>$(PRODUCT_NAME)</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>$(MARKETING_VERSION)</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.462278481265-kugstu9sglncb5ms2vfi9glrkfqn531v</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>msauth.$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>beaver.notes.pocket</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>beaver-pocket</string>
+			</array>
+		</dict>
+	</array>
+	<key>CFBundleVersion</key>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>msauthv2</string>
+		<string>msauthv3</string>
+	</array>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>To secure notes</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>To record audio notes</string>
+	<key>NSUbiquitousContainers</key>
+	<dict>
+		<key>iCloud.beaver.notes.pocket</key>
+		<dict>
+			<key>NSUbiquitousContainerIsDocumentScopePublic</key>
+			<true/>
+			<key>NSUbiquitousContainerName</key>
+			<string>Beaver Pocket</string>
+			<key>NSUbiquitousContainerSupportedFolderLevels</key>
+			<string>ANY</string>
+		</dict>
+	</dict>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>armv7</string>
+	</array>
+	<key>UIRequiresFullScreen</key>
+	<false/>
+	<key>UIStatusBarHidden</key>
+	<false/>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.json</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>BEA Custom File</string>
+			<key>UTTypeIconFiles</key>
+			<array/>
+			<key>UTTypeIdentifier</key>
+			<string>beaver.notes.pocket.bea</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>bea</string>
+				</array>
+				<key>public.mime-type</key>
+				<string>application/json</string>
+			</dict>
+		</dict>
+	</array>
+</dict>
 </plist>
