--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -26,10 +26,10 @@ jobs:
           node-version: 23.x
 
       - name: Install app dependencies
-        run: npm install
+        run: yarn
 
       - name: Build Svelte app
-        run: npm run build:static
+        run: yarn build
 
       - name: Capacitor update
         run: npx cap update
