--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -54,7 +54,7 @@ jobs:
           node-version: 23.x
 
       - name: Install app dependencies
-        run: yarn
+        run: yarn install
 
       - name: Build project app
         run: yarn build
