(fix/ci): fixed ci and deps

--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -12,7 +12,7 @@ jobs:
     name: Build iOS app
     steps:
       - name: Checkout source
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install the Apple certificate and provisioning profile
         env:
@@ -49,9 +49,19 @@ jobs:
           xcode-version: latest-stable
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
+
+      - name: Cache yarn dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/yarn
+            node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: Install app dependencies
         run: yarn install --frozen-lockfile
