--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -25,6 +25,16 @@ jobs:
         with:
           node-version: 20
 
+      - name: Cache yarn dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/yarn
+            node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: Install app dependencies
         run: yarn install --frozen-lockfile
 
