--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -36,7 +36,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install app dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile --verbose
 
       - name: Build Svelte app
         run: yarn build
