--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,10 +11,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField "String", "SERVER_CLIENT_ID", "\"${project.GOOGLE_CLIENT_ID}\""
+        def googleClientId = project.hasProperty("GOOGLE_CLIENT_ID") ? project.GOOGLE_CLIENT_ID : System.getenv("GOOGLE_CLIENT_ID") ?: ""
+        buildConfigField "String", "SERVER_CLIENT_ID", "\"${googleClientId}\""
+        def onedriveSha1 = project.hasProperty("ONEDRIVE_SHA1") ? project.ONEDRIVE_SHA1 : System.getenv("ONEDRIVE_SHA1") ?: ""
 
         manifestPlaceholders = [
-                ONEDRIVE_SHA1: "${project.ONEDRIVE_SHA1}"
+            ONEDRIVE_SHA1: onedriveSha1        
         ]
 
         signingConfigs {
@@ -24,13 +26,17 @@ android {
                 keyAlias "androiddebugkey"
                 keyPassword "android"
             }
+            release {
+                storeFile file("release.jks")
+                storePassword System.getenv("RELEASE_KEYSTORE_PASSWORD")
+                keyAlias "beaver-pocket"
+                keyPassword System.getenv("RELEASE_KEY_PASSWORD")
+            }
         }
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.debug  // Optional: If you want to sign the release build with debug key
+        signingConfig signingConfigs.release
         }
     }
 }
