--- a/package.json
+++ b/package.json
@@ -31,10 +31,7 @@
     "@capacitor/splash-screen": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
-    "@emotion/core": "^11.0.0",
     "@headlessui/react": "^2.1.1",
-    "@ionic/cli": "^7.1.6",
-    "@ionic/react": "7.6.2",
     "@recognizebv/capacitor-plugin-msauth": "^3.6.0",
     "@sereneinserenade/tiptap-search-and-replace": "^0.1.1",
     "@tailwindcss/typography": "^0.5.15",
@@ -79,10 +76,7 @@
     "@types/dompurify": "^3.0.5",
     "@types/mousetrap": "^1.6.15",
     "@types/react-transition-group": "^4.4.11",
-    "@types/simple-oauth2": "^5.0.7",
     "@types/uuid": "^9.0.7",
-    "@types/xml2js": "^0.4.14",
-    "@use-gesture/react": "^10.3.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.8",
     "capa-zip": "^7.0.3",
@@ -91,7 +85,6 @@
     "capacitor-secure-storage-plugin": "^0.10.0",
     "capacitor-voice-recorder": "^5.0.0",
     "capacitor-webview-print": "^6.0.1",
-    "crypto-es": "^2.1.0",
     "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "dayjs": "^1.11.10",
@@ -99,23 +92,19 @@
     "dropbox": "^10.34.0",
     "eslint-config-react-app": "^7.0.1",
     "highlight.js": "^11.9.0",
-    "jszip": "^3.10.1",
     "katex": "0.13.0",
     "lowlight": "2.9.0",
     "mermaid": "^10.9.1",
     "mime": "^4.0.6",
     "mousetrap": "^1.6.5",
     "native-run": "^2.0.0",
-    "pcloud-sdk-js": "^2.0.0",
     "perfect-freehand": "^1.2.2",
-    "polygon-clipping": "^0.15.7",
     "postcss": "^8.4.32",
     "postcss-nesting": "^12.0.1",
     "prosemirror-history": "^1.3.2",
     "prosemirror-model": "^1.19.3",
     "prosemirror-state": "^1.4.3",
     "prosemirror-utils": "^1.2.2",
-    "puppeteer": "^21.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-portal-overlay": "^1.1.0",
@@ -127,13 +116,11 @@
     "remixicon-react": "^1.0.0",
     "sass": "^1.77.2",
     "send-intent": "^6.0.2",
-    "simple-oauth2": "^5.0.0",
     "tiptap": "^1.32.2",
     "tiptap-commands": "^1.17.1",
     "tiptap-extension-resize-image": "^1.1.5",
     "tw-colors": "^3.3.2",
-    "uuid": "^9.0.1",
-    "xml2js": "^0.6.2"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/katex": "^0.16.7",
