--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -73,8 +73,7 @@ jobs:
           xcodebuild -exportArchive \
             -archivePath App.xcarchive \
             -exportOptionsPlist ./archive.plist \
-            -exportPath output \
-            -allowProvisioningUpdates
+            -exportPath output 
 
       - name: Upload release bundle
         uses: actions/upload-artifact@v4
