--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -1,10 +1,8 @@
 require_relative '../../node_modules/@capacitor/ios/scripts/pods_helpers'
 
 platform :ios, '13.0'
-use_frameworks!
-# workaround to avoid Xcode caching of Pods that requiresx
-# Product -> Clean Build Folder after new Cordova plugins installed
-# Requires CocoaPods 1.6 or newer
+
+# workaround to avoid Xcode caching of Pods
 install! 'cocoapods', :disable_input_output_paths => true
 
 def capacitor_pods
@@ -33,8 +31,14 @@ def capacitor_pods
 end
 
 target 'App' do
+  use_frameworks! # ✅ Only inside the app target
   capacitor_pods
-  # Add your Pods here
+
+  # Optional: If you have a Share Extension target defined
+  target 'share' do
+    inherit! :search_paths
+    # ❌ No use_frameworks! here!
+  end
 end
 
 post_install do |installer|
