--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -1,6 +1,6 @@
 require_relative '../../node_modules/@capacitor/ios/scripts/pods_helpers'
 
-platform :ios, '13.0'
+platform :ios, '14.0'
 use_frameworks!
 # workaround to avoid Xcode caching of Pods that requiresx
 # Product -> Clean Build Folder after new Cordova plugins installed
@@ -22,10 +22,10 @@ def capacitor_pods
   pod 'CapacitorShare', :path => '../../node_modules/@capacitor/share'
   pod 'CapacitorSplashScreen', :path => '../../node_modules/@capacitor/splash-screen'
   pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
-  pod 'DanieleRolliCapacitorGoogleAuth', :path => '../../node_modules/@daniele-rolli/capacitor-google-auth'
+  pod 'CapgoCapacitorNativeBiometric', :path => '../../node_modules/@capgo/capacitor-native-biometric'
+  pod 'DanieleRolliCapacitorGoogleAuth', :path => '../../../CapacitorGoogleAuth'
   pod 'RecognizebvCapacitorPluginMsauth', :path => '../../node_modules/@recognizebv/capacitor-plugin-msauth'
   pod 'CapaZip', :path => '../../node_modules/capa-zip'
-  pod 'CapacitorNativeBiometric', :path => '../../node_modules/capacitor-native-biometric'
   pod 'CapacitorSecureStoragePlugin', :path => '../../node_modules/capacitor-secure-storage-plugin'
   pod 'CapacitorVoiceRecorder', :path => '../../node_modules/capacitor-voice-recorder'
   pod 'CapacitorWebviewPrint', :path => '../../node_modules/capacitor-webview-print'
