--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
     "@auth0/auth0-react": "^2.2.4",
     "@benrbray/prosemirror-math": "0.2.2",
     "@capacitor-community/app-icon": "^5.0.0",
-    "@capacitor/android": "^6.2.0",
-    "@capacitor/app": "^6.0.2",
-    "@capacitor/browser": "^6.0.4",
-    "@capacitor/cli": "^6.2.0",
-    "@capacitor/core": "^6.2.0",
-    "@capacitor/device": "^6.0.2",
-    "@capacitor/filesystem": "6.0.2",
-    "@capacitor/haptics": "^6.0.0",
-    "@capacitor/ios": "^6.2.0",
-    "@capacitor/keyboard": "^6.0.2",
-    "@capacitor/preferences": "^6.0.0",
-    "@capacitor/share": "^6.0.0",
-    "@capacitor/splash-screen": "^6.0.0",
-    "@capacitor/status-bar": "^6.0.0",
-    "@daniele-rolli/capacitor-google-auth": "^3.4.0-rc.5",
+    "@capacitor/android": "^7.0.0",
+    "@capacitor/app": "^7.0.0",
+    "@capacitor/browser": "^7.0.0",
+    "@capacitor/cli": "^7.0.0",
+    "@capacitor/core": "^7.0.0",
+    "@capacitor/device": "^7.0.0",
+    "@capacitor/filesystem": "^7.0.0",
+    "@capacitor/haptics": "^7.0.0",
+    "@capacitor/ios": "^7.0.0",
+    "@capacitor/keyboard": "^7.0.0",
+    "@capacitor/preferences": "^7.0.0",
+    "@capacitor/share": "^7.0.0",
+    "@capacitor/splash-screen": "^7.0.0",
+    "@capacitor/status-bar": "^7.0.0",
+    "@capgo/capacitor-native-biometric": "^7.1.7",
+    "@daniele-rolli/capacitor-google-auth": "^3.4.0-rc.6",
     "@headlessui/react": "^2.1.1",
     "@recognizebv/capacitor-plugin-msauth": "^3.6.0",
     "@sereneinserenade/tiptap-search-and-replace": "^0.1.1",
@@ -81,7 +82,6 @@
     "axios": "^1.6.8",
     "capa-zip": "^7.0.3",
     "capacitor": "^0.5.6",
-    "capacitor-native-biometric": "^4.2.2",
     "capacitor-secure-storage-plugin": "^0.10.0",
     "capacitor-voice-recorder": "^5.0.0",
     "capacitor-webview-print": "^6.0.1",
