--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-portal-overlay": "^1.1.0",
-    "react-router-dom": "^6.21.0",
+    "react-router-dom": "6",
     "react-swipeable": "^7.0.1",
     "react-transition-group": "^4.4.5",
     "react-use": "^17.5.0",
