--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "remixicon-react": "^1.0.0",
     "sass": "^1.77.2",
     "send-intent": "^6.0.2",
+    "tiny-emitter": "^2.1.0",
     "tiptap": "^1.32.2",
     "tiptap-commands": "^1.17.1",
     "tiptap-extension-resize-image": "^1.1.5",
