--- a/.github/workflows/build_ios_testing.yml
+++ b/.github/workflows/build_ios_testing.yml
@@ -1,9 +1,9 @@
-name: Build iOS (testing)
+name: Build iOS
 
 on:
   push:
     branches:
-      - testing
+      - main
   workflow_dispatch:
 
 jobs:
@@ -15,6 +15,12 @@ jobs:
       BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
       BUILD_PROVISION_PROFILE_SHARE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_SHARE_BASE64 }}
       BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
+      VITE_DROPBOX_CLIENT_ID: ${{ secrets.DROPBOX_CLIENT_ID }}
+      VITE_DROPBOX_CLIENT_SECRET: ${{ secrets.DROPBOX_CLIENT_SECRET }}
+      VITE_IOS_GOOGLE_CLIENT_ID: ${{ secrets.IOS_GOOGLE_CLIENT_ID }}
+      VITE_ANDROID_GOOGLE_CLIENT_ID: ${{ secrets.ANDROID_GOOGLE_CLIENT_ID }}
+      VITE_ONEDRIVE_CLIENT_ID: ${{ secrets.ONEDRIVE_CLIENT_ID }}
+      VITE_ONEDRIVE_ANDROID_HASH: ${{ secrets.ONEDRIVE_ANDROID_HASH }}
 
     steps:
       - name: Checkout source
@@ -30,6 +36,17 @@ jobs:
         with:
           node-version: 20
           cache: yarn
+
+      - name: Create .env file
+        run: |
+          cat <<EOF > .env
+          VITE_DROPBOX_CLIENT_ID=${VITE_DROPBOX_CLIENT_ID}
+          VITE_DROPBOX_CLIENT_SECRET=${VITE_DROPBOX_CLIENT_SECRET}
+          VITE_IOS_GOOGLE_CLIENT_ID=${VITE_IOS_GOOGLE_CLIENT_ID}
+          VITE_ANDROID_GOOGLE_CLIENT_ID=${VITE_ANDROID_GOOGLE_CLIENT_ID}
+          VITE_ONEDRIVE_CLIENT_ID=${VITE_ONEDRIVE_CLIENT_ID}
+          VITE_ONEDRIVE_ANDROID_HASH=${VITE_ONEDRIVE_ANDROID_HASH}
+          EOF
 
       - name: Install app dependencies
         run: yarn install --frozen-lockfile
@@ -86,11 +103,11 @@ jobs:
           name: app-ios
           path: output/
           retention-days: 60
-      
-      - name: 'Upload app to TestFlight'
+
+      - name: "Upload app to TestFlight"
         uses: apple-actions/upload-testflight-build@v3
-        with: 
-          app-path: 'output/App.ipa'
+        with:
+          app-path: "output/App.ipa"
           issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
           api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
           api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
