--- a/.github/workflows/build-android_testing.yml
+++ b/.github/workflows/build-android_testing.yml
@@ -1,9 +1,9 @@
-name: Build Android Release
+name: Build Android
 
 on:
   push:
     branches:
-      - main
+      - testing
   workflow_dispatch:
 
 jobs:
