--- a/.github/workflows/build_ios_testing.yml
+++ b/.github/workflows/build_ios_testing.yml
@@ -1,9 +1,9 @@
-name: Build iOS
+name: Build iOS Testing
 
 on:
   push:
     branches:
-      - main
+      - testing
   workflow_dispatch:
 
 jobs:
